# cs_rtsi

./: CMakeLists.txt  README.md  cs_rtsiConfig.cmake
examples/: connect_test.cpp  control_test.cpp  getData_test.cpp  getSetData_test.cpp  move_test.cpp  recipe.json  servoj_test.cpp  setData_test.cpp
include/cs_rtsi/: CMakeLists.txt  robot_state.cpp  robot_state.h  rtsi.cpp  rtsi.h  rtsi_control_interface.h  rtsi_io_interface.h  rtsi_io_interface_api.h  rtsi_receive_interface.cpp  rtsi_receive_interface.h  rtsi_receive_interface_api.h  rtsi_utility.h
pluginScript/: PluginManager.h  SamplePlugIn.cpp  testPlugin.cpp
robot_script/: cs_robot_script.script  task2.cpp  task2.script
src/: CMakeLists.txt  connect_test.cpp  getData_test.cpp  robot_state.cpp  rtsi.cpp  rtsi_control_interface.cpp  rtsi_io_interface.cpp  rtsi_receive_interface.cpp
